--- a/python/pluralsight-unit-testing-with-python/ch02-WhyAndWhenShouldYouWriteUnitTests.ipynb
+++ b/python/pluralsight-unit-testing-with-python/ch02-WhyAndWhenShouldYouWriteUnitTests.ipynb
@@ -345,7 +345,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "code_folding": []
+   },
    "outputs": [],
    "source": [
     "# SAVE AS prescription.py\n",
@@ -531,6 +533,18 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
