Pluralsight tutorial "Unit Testing with Python".
Chapter 5 and 6.

Change-Id: I3a914bc88e8aff2d56f09b5c14b134925b4a93b1
Signed-off-by: Wei Ren <renwei@smartconn.cc>

--- a/python/pluralsight-unit-testing-with-python/ch04-TestableDocumentationWithDoctest.ipynb
+++ b/python/pluralsight-unit-testing-with-python/ch04-TestableDocumentationWithDoctest.ipynb
@@ -1215,7 +1215,18 @@
     "(2) Regression protection => Put it in a separate file & consider moving to `unittest` or `pytest`\n",
     "\n",
     "## 4.11 Doctest for checking tutorial documentation\n",
-    "\n"
+    "\n",
+    "## 4.12 Module review\n",
+    "\n",
+    "(1) Situations when you'd use `doctest`\n",
+    "\n",
+    "* Checking examples in docstrings\n",
+    "* Regression testing\n",
+    "* Tutorial documentation\n",
+    "\n",
+    "(2) Handling output that changes\n",
+    "\n",
+    "(3) Using `pytest` as a test runner for doctests"
    ]
   }
  ],
