--- a/tensorflow/tensorflow-object-detection-api-tutorial/ch01-IntroductionAndUse.ipynb
+++ b/tensorflow/tensorflow-object-detection-api-tutorial/ch01-IntroductionAndUse.ipynb
@@ -68,9 +68,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ml]",
+   "display_name": "Python [conda env:ml-opencv]",
    "language": "python",
-   "name": "conda-env-ml-py"
+   "name": "conda-env-ml-opencv-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -82,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   },
   "toc": {
    "nav_menu": {},
