--- a/python/pluralsight-the-python-developers-toolkit/ch06-DocumentingYourCodeWithSphinx.ipynb
+++ b/python/pluralsight-the-python-developers-toolkit/ch06-DocumentingYourCodeWithSphinx.ipynb
@@ -277,9 +277,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ml]",
+   "display_name": "Python [conda env:ml-opencv]",
    "language": "python",
-   "name": "conda-env-ml-py"
+   "name": "conda-env-ml-opencv-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -291,9 +291,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.5"
   },
   "toc": {
+   "base_numbering": 1,
    "nav_menu": {},
    "number_sections": false,
    "sideBar": true,
