Pluralsight tutorial "The Python Developer's Toolkit".
Chapter 3. Isolated Development Environments With Virtualenv

Change-Id: Iadc5bb51fe18ad4987bc57eb360dfef6fe6d066d
Signed-off-by: Wei Ren <renwei@smartconn.cc>

--- a/python/pluralsight-the-python-developers-toolkit/ch02-ManagingPythonPackages.ipynb
+++ b/python/pluralsight-the-python-developers-toolkit/ch02-ManagingPythonPackages.ipynb
@@ -268,9 +268,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ml-opencv]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "conda-env-ml-opencv-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -282,10 +282,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.4"
   },
   "toc": {
-   "base_numbering": 1,
    "nav_menu": {},
    "number_sections": false,
    "sideBar": true,
